force-app/zurich-base/main/default/objects/Quote/fields/InfoOptionNumber__c.field-meta.xml
<CustomField>
    <fullName>InfoOptionNumber__c</fullName>
    <externalId>true</externalId>
    <label>INFO Option Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>