force-app/zurich-base/main/default/objects/Quote/fields/NetPremium__c.field-meta.xml
<CustomField>
    <fullName>NetPremium__c</fullName>
    <description>(OCS). Correspondiente al campo Prima técnica en INFO</description>
    <label>Net Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>