force-app/zurich-base/main/default/objects/Quote/fields/PackageDescription__c.field-meta.xml
<CustomField>
    <fullName>PackageDescription__c</fullName>
    <label>Package Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>