force-app/zurich-base/main/default/objects/Quote/fields/SurchargeDiscount__c.field-meta.xml
<CustomField>
    <fullName>SurchargeDiscount__c</fullName>
    <description>OCS</description>
    <label>Surcharge/Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>