force-app/zurich-base/main/default/objects/Quote/fields/TotalPremium__c.field-meta.xml
<CustomField>
    <fullName>TotalPremium__c</fullName>
    <description>(OCS). Correspondiente al campo Prima recibo en INFO</description>
    <label>Total Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>